--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-off logo-small"></span>
+      <span class="glyphicon glyphicon-dashboard logo-small"></span>
       <h4>Hor&aacute;rios:</h4>
       <p></p>
       <p>Segunda-feira - 10:00h-22:00h</p>
