--- a/index.html
+++ b/index.html
@@ -227,22 +227,22 @@
 
 <h4 style="height:40px;"><strong>#5 - Edif&iacute;cio Panoramico de Monsanto</strong></h4><br>
 <a>Este espa&ccedil;o era suposto ser um hotel ou restaurante, com vista privilegiada para Lisboa, situado no lindo parque de Monsanto! As obras arrancaram em 1970, os projectos foram mudando, mas a obra nunca foi conclu&iacute;da! H&aacute; quem diga que uma onda de m&aacute; sorte paira na zona, impedindo a concretiza&ccedil;&atilde;o de qualquer obra neste local!</a><br>
-<img src="no3.jpg" alt="Edificio Panoramico de 	Monsanto" width="500" height="333">
+<img src="no3.jpg" alt="Edificio Panoramico de 	Monsanto" width="500" height="333" class="center">
 
 <h4 style="height:40px;"> <strong>#4 - Convento de Mafra</strong></h4><br>
 <a>Mais do que fantasmas, diz-se em Mafra que estranhos seres habitam os calabou&ccedil;os do convento! H&aacute; quem fale numas ratazanas mutantes, imunes a qualquer desinfesta&ccedil;&atilde;o! Outros alegam que s&atildeo os esp&iacute;ritos dos antigos obreiros e trabalhadores, que ali padeceram, devido as condi&ccedil;&otilde;es prec&aacute;rias de trabalho, que ainda hoje assombram o local!</a><br>
-<img src="no2.jpg" alt="Convento de Mafra" width="500" height="333">
+<img src="no2.jpg" alt="Convento de Mafra" width="500" height="333" class="center">
 
 <h4 style="height:40px;"><strong>#3 - Teatro Lethes, Faro</strong></h4><br>
 <a>Diz-se que por vezes e quando tudo est&aacute; em silencio, se pode escutar passos e a madeira do palco principal do Teatro de Lethes, em Faro, a ranger. Conta-se que uma bailarina, exausta pela exigencia, ali se suicidou, enforcando-se no palco do teatro e que a alma da bailarina, ainda hoje anda (ou dan&ccedil;a!) por ali ... </a><br>
-<img src="no2.jpg" alt="Teatro Lethes, Faro" width="500" height="333">
+<img src="no2.jpg" alt="Teatro Lethes, Faro" width="500" height="333" class="center">
 
 <h4 style="height:40px;"><strong>#2 - Sanat&oacute;rio de Mont Alto, Serra de Valongo</strong></h4><br>
 <a>Visitar uma ala psiqui&aacute;trica, j&aacute; &eacute; suficiente para sentir um friozinho de barriga! O Sanat&eacute;rio de Valongo foi aberto para cuidar de doentes com tuberculose e apesar das 50 camas, chegou a acolher 350 pacientes! Existem hist&oacute;ria de negligencia e maus-tratos documentadas, que logo se transformaram em lendas de arrepiar! N&atilde;o &eacute; pois uma surpresa, as hist&oacute;rias sobre esp&iacute;ritos dos doentes tuberculosos, que deambulam pelos corredores e assombram aqueles que por aqui se aventuram!</a><br>
-<img src="no2.jpg" alt="Sanatorio de Mont Alto, Serra de Valongo" width="500" height="333">
+<img src="no2.jpg" alt="Sanatorio de Mont Alto, Serra de Valongo" width="500" height="333" class="center">
 
 <h4 style="height:40px;"><strong>#1 - Bataria da Parede</<strong></h4><br>
-<img src="no2.jpg" alt="Bataria da Parede" width="500" height="333">
+<img src="no2.jpg" alt="Bataria da Parede" width="500" height="333" class="center">
 
 
 <h4 style="height:40px;">Localiza&ccedil;&otilde;es : <span class="glyphicon glyphicon-globe"></h4>  
