--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
   .form-control {
       border-radius: 0;
   }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
   </style>
 </head>
 <body background-color="white" width="100%" id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
