--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>TOP 5 LUGARES MAIS ASSUSTADORES DE PORTUGAL</title>
+  <title>TOP 5 LUGARES ASSUSTADORES DE PORTUGAL</title>
 
   <meta charset="utf-8">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
@@ -166,16 +166,16 @@
       background-color: #2d2d30;
       border: 0;
       font-size: 18px !important;
-      letter-spacing: 4px;
-      opacity: 0.9;
+      letter-spacing: 1px;
+      opacity: 0.2;
   }
   .navbar li a, .navbar .navbar-brand { 
       color: #d5d5d5 !important;
   }
    
    #map {
-        height: 400px;
-        width: 100%;
+        max-height: 100%;
+        max-width: 100%;
 }
   .navbar-nav li a:hover {
       color: #fff !important;
@@ -264,9 +264,9 @@
 
 <p>CONFIRA AQUI OS LUGARES NO TOP 5!</p>
 
-<h4 style="height:40px;" class="slideanim"><strong>#5 - Edif&iacute;cio Panoramico de Monsanto</strong></h4><br>
-<a><strong><strong>Este espa&ccedil;o era suposto ser um hotel ou restaurante, com vista privilegiada para Lisboa, situado no lindo parque de Monsanto! As obras arrancaram em 1970, os projectos foram mudando, mas a obra nunca foi conclu&iacute;da! H&aacute; quem diga que uma onda de m&aacute; sorte paira na zona, impedindo a concretiza&ccedil;&atilde;o de qualquer obra neste local!</strong></a><br>
-<img src="no3.jpg" alt="Edificio Panoramico de 	Monsanto" max-width="100%" max-height="100%" class="center">
+<h4 style="height:40px;" class="slideanim"><strong>#5 -  Pal&aacute;cio de Valen&ccedil;as, Sintra</strong></h4><br>
+<a><strong>Sintra tem todos os ingredientes para uma escapadinha romantica, mas tamb&eacute;m para ser o palco de hist&oacute;rias de terror e suspense – e E&ccedil;a de Quier&oacute;s soube aproveitar bem esse mist&eacute;rio na sua obra e existem v&aacute;rias tours noturnas pela Serra de Sintra! Adiante! Conta a hist&oacute;ria, que a criada do Conde de Valen&ccedil;as, Palmira, depois de um amor n&atilde;o correspondido, se suicidou… e que ainda hoje anda por ali, a rondar a casa, chorando o amor que nunca teve!</strong></a><br>
+<img src="no12.jpg" alt="Palacio de Valencas, Sintra" max-width="100%" max-height="100%" class="center">
 
 <h4 style="height:40px;" class="slideanim"> <strong>#4 - Convento de Mafra</strong></h4><br>
 <a><strong>Mais do que fantasmas, diz-se em Mafra que estranhos seres habitam os calabou&ccedil;os do convento! H&aacute; quem fale numas ratazanas mutantes, imunes a qualquer desinfesta&ccedil;&atilde;o! Outros alegam que s&atildeo os esp&iacute;ritos dos antigos obreiros e trabalhadores, que ali padeceram, devido as condi&ccedil;&otilde;es prec&aacute;rias de trabalho, que ainda hoje assombram o local!</strong></a><br>
