--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 <img src="no2.jpg" alt="Teatro Lethes, Faro" max-width="100%" max-height="100%" class="center">
 
 <h4 style="height:40px;" class="slideanim"><strong>#2 - Sanat&oacute;rio de Mont Alto, Serra de Valongo</strong></h4><br>
-<a><strong>Visitar uma ala psiqui&aacute;trica, j&aacute; &eacute; suficiente para sentir um friozinho de barriga! O Sanat&eacute;rio de Valongo foi aberto para cuidar de doentes com tuberculose e apesar das 50 camas, chegou a acolher 350 pacientes! Existem hist&oacute;ria de negligencia e maus-tratos documentadas, que logo se transformaram em lendas de arrepiar! N&atilde;o &eacute; pois uma surpresa, as hist&oacute;rias sobre esp&iacute;ritos dos doentes tuberculosos, que deambulam pelos corredores e assombram aqueles que por aqui se aventuram!</strong></a><br>
+<a><strong>Visitar uma ala psiqui&aacute;trica, j&aacute; &eacute; suficiente para sentir um friozinho de barriga! O Sanat&oacute;rio de Valongo foi aberto para cuidar de doentes com tuberculose e apesar das 50 camas, chegou a acolher 350 pacientes! Existem hist&oacute;ria de negligencia e maus-tratos documentadas, que logo se transformaram em lendas de arrepiar! N&atilde;o &eacute; pois uma surpresa, as hist&oacute;rias sobre esp&iacute;ritos dos doentes tuberculosos, que deambulam pelos corredores e assombram aqueles que por aqui se aventuram!</strong></a><br>
 <img src="no2.jpg" alt="Sanatorio de Mont Alto, Serra de Valongo" max-width="100%" max-height="100%" class="center">
 
 <h4 style="height:40px;" class="slideanim"><strong>#1 - Bataria da Parede</<strong></h4><br>
