--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
 <a><strong>Sintra tem todos os ingredientes para uma escapadinha romantica, mas tamb&eacute;m para ser o palco de hist&oacute;rias de terror e suspense – e E&ccedil;a de Quier&oacute;s soube aproveitar bem esse mist&eacute;rio na sua obra e existem v&aacute;rias tours noturnas pela Serra de Sintra! Adiante! Conta a hist&oacute;ria, que a criada do Conde de Valen&ccedil;as, Palmira, depois de um amor n&atilde;o correspondido, se suicidou… e que ainda hoje anda por ali, a rondar a casa, chorando o amor que nunca teve!</strong></a><br>
 <img src="no12.jpg" alt="Palacio de Valencas, Sintra" max-width="100%" max-height="100%" class="center">
 
-<h4 style="height:40px;" class="slideanim"> <strong>#4 - Convento de Mafra</strong></h4><br>
-<a><strong>Mais do que fantasmas, diz-se em Mafra que estranhos seres habitam os calabou&ccedil;os do convento! H&aacute; quem fale numas ratazanas mutantes, imunes a qualquer desinfesta&ccedil;&atilde;o! Outros alegam que s&atildeo os esp&iacute;ritos dos antigos obreiros e trabalhadores, que ali padeceram, devido as condi&ccedil;&otilde;es prec&aacute;rias de trabalho, que ainda hoje assombram o local!</strong></a><br>
+<h4 style="height:40px;" class="slideanim"> <strong>#4 - Palacete de Marques Gomes, Vila Nova de Gaia</strong></h4><br>
+<a><strong>Conta quem aqui j&aacute; tentou entrar, que logo a entrada, se ouvem berros “Saiam daqui! Saiam daqui!”, numa voz fria e aguda, ouvindo passos pelos corredores da casa... tentando expulsar os mais atrevidos! O palacete da Gaia  foi constru&iacute;do nos finais do s&eacute;culo XIX e mesmo agora aqueles que se aventuram, acabam por fugir, da casa assombrada de Vila Nova de Gaia!</strong></a><br>
 <img src="no2.jpg" alt="Convento de Mafra" max-width="100%" max-height="100%" class="center">
 
 <h4 style="height:40px;" class="slideanim"><strong>#3 - Teatro Lethes, Faro</strong></h4><br>
@@ -281,6 +281,7 @@
 <img src="no2.jpg" alt="Sanatorio de Mont Alto, Serra de Valongo" max-width="100%" max-height="100%" class="center">
 
 <h4 style="height:40px;" class="slideanim"><strong>#1 - Bataria da Parede</<strong></h4><br>
+<a><strong>O motivo de este lugar estar em primeiro lugar no TOP 5 &eacute;, de certa maneira estranho, e assustador! Não se sabe o que l&aacute; se passa durante a noite, e não existem relatos de nada porque NINGU&Eacute;M AT&Eacute; HOJE SE ATREVEU a entrar nos t&uacute;neis de noite... Ou será que sim? Há uma história sobre um miúdo que desapareceu, após ter se afastado do seu grupinho, durante uma "explora&ccedil;&atilde;o noturna" ... Até hoje, é o lugar escolhido pelos mais aventureiros e curiosos... Será que existe alguma coisa dentro daqueles t&uacute;neis durante a noite? N&atilde;o se sabe... A &uacute;ltima explora&ccedil;&atilde;o noturna que houve, foi quando o rapaz desapareceu... Talvez haja... Mas ele n&atilde;o est&aacute; c&aacute; para contar...</strong></a>
 <img src="no2.jpg" alt="Bataria da Parede" max-width="100%" max-height="100%" class="center">
 
 
