--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
       border: 0;
       font-size: 18px !important;
       opacity: 0.9;
+      position: relative;
   }
   .navbar li a, .navbar .navbar-brand { 
       color: #d5d5d5 !important;
+      position: relative;
   }
    
    #map {
