--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <h4 style="height:40px;" class="slideanim">Localiza&ccedil;&otilde;es : <span class="glyphicon glyphicon-globe"></h4>  
 </div>
 
-<div id="map" class="slideanim"></div>
+<div id="map"></div>
     <script>
       function initMap() {
         var uluru = {lat: 38.696868, lng: -9.3607997};
@@ -302,6 +302,7 @@
           map: map
         });
       }
+
     </script>
     <script async defer
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAG5zRYtFlcdLpIKSmTH7MHo6fpqBoaZgU&callback=initMap">
