--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 </div>
 <h4 style="height:40px;" class="slideanim">Localiza&ccedil;&otilde;es : <span class="glyphicon glyphicon-globe"></h4>  
 
-<div id="map"></div>
+<div id="map">
     <script>
       function initMap() {
         var uluru = {lat: 38.696868, lng: -9.3607997};
@@ -303,6 +303,7 @@
     <script async defer
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAG5zRYtFlcdLpIKSmTH7MHo6fpqBoaZgU&callback=initMap">
 </script>
+</div>
 <script>
 	$(window).scroll(function() {
   $(".slideanim").each(function(){
