--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
       color: #111;
      text-align: left;
   }
+  .ss-icon-size-32 {
+    line-height: 32px;
+}
+.dvk-social-sharing {
+    line-height: 16px;
+}
+* {
+    letter-spacing: 0px!important;
+    text-transform: none!important;
+    font-weight: 400;
+}
   h1{
   
   }
