--- a/index.html
+++ b/index.html
@@ -269,8 +269,11 @@
   </div>
 </div>
 </div>
-
-<p class="dvk-social-sharing ss-icon-size-32">
+<p>Seja Bem-vindo! Trago-vos um TOP 5 de lugares muito assustadores de Portugal!
+<p>Estes são os lugares que até hoje mantêm muitos mistérios entre a população...</p>
+<p>Confira agora!</p>
+<p></p>
+<p class="dvk-social-sharing ss-icon-size-32 slideanim">
         			<span class="ss-ask">Compartilhe para os seus amigos! : </span>
 		
         <a rel="external nofollow" class="ss-twitter" href="https://twitter.com/intent/tweet/?text=11+Lugares+assombrados+em+Portugal&amp;url=https%3A%2F%2Fdavidthesalad.github.io%2FTugaCuriosidades.github.io%2Findex.html%2F" target="_blank">
