--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
       background-color  : white;
       background-size   : 100%;
   }
+  p{
+	  color:white;
+  }
   h3, h4 {   
       font-size: 9px;
       color: #111;
