--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
 <head>
 
-<link rel="stylesheet" type="text/css" href="menucss.css">
+<link rel="stylesheet" type="text/css" href="css/menucss.css">
 	
 </head>
 <body style = "background-color:  black; margin: 0; overflow: hidden; height:100%; width:auto; -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
  unselectable="on"
  onselectstart="return false" 
  onmousedown="return false">
-
-
-<!--<div id="skipMessage" onclick="skip()" style="height: 100%; width: auto; display: none;"></div>-->
 
 <video height="100%" width="100%" poster="mainmenupage.png" id="vid" style="controls: none">
          <source id="mp4video" type="video/mp4" src="videos/intro.mp4"></source>
@@ -28,10 +25,6 @@
 </div>
 
 <a id="skipMessage" onclick="skip()" style="bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
-
-<label id="layer1" style="display: none"> </label>
-<label id="layer2" style="display: none"> </label>
-<label id="layer3" style="display: none"> </label>
 
 <div id="choiceA" class="container" style="display: none;">
 	
@@ -51,17 +44,17 @@
 
 <div id="choiceA1_1" class="container" style="display: none;">
 
-	<a id="A1_1_1" style="left: 30%; bottom: 9%;"><span><strong>I'm gonna watch a movie...</strong></span></a>
-	<a id="A1_1_2" style="left: 30%; bottom: 2%;"><span><strong>I'm gonna check outside...</strong></span></a>
-	<a id="A1_1_3" style="bottom: 9%;"><span><strong>I'm gonna check outside...</strong></span></a>
-	<a id="A1_1_4" style="bottom: 2%;"><span><strong>I'm gonna check outside...</strong></span></a>
+	<a id="A1_1_1" style="left: 30%; bottom: 9%;"><span><strong>I HAVE TO STAY HERE!</strong></span></a>
+	<a id="A1_1_2" style="left: 30%; bottom: 2%;"><span><strong>I HAVE TO STAY HERE!</strong></span></a>
+	<a id="A1_1_3" style="bottom: 9%;"><span><strong>I HAVE TO STAY HERE!</strong></span></a>
+	<a id="A1_1_4" style="bottom: 2%;"><span><strong>RUN TO THE DOOR BEHIND ME</strong></span></a>
 
 </div>
 
-<div id="choiceA1_2" class="container" style="display: none;">
+<div id="choiceA1_1" class="container" style="display: none;">
 
-	<a id="A1_2_1" style="bottom: 9%;"><span><strong>I'm gonna watch a movie...</strong></span></a>
-	<a id="A1_2_2" style="bottom: 2%;"><span><strong>I'm gonna check outside...</strong></span></a>
+	<a id="A1_2_1" style="left: 30%; style="bottom: 2%;"><span><strong>GET FRONT DOOR KEY ON LEFT</strong></span></a>
+	<a id="A1_2_2" style="bottom: 2%;"><span><strong>RUN FAST TO RIGHT</strong></span></a>
 
 </div>
 
