--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  onmousedown="return false">
 
 <video height="100%" width="100%" poster="mainmenupage.png" id="vid" style="controls: none">
-         <source id="mp4video" src="https://www.youtube.com/watch?v=3qqt5SZt9go"></source>
+         <source id="mp4video" type="video/mp4" src="videos/intro.mp4"></source>
 </video>
 </div>
 
