--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </div>
 
-<a id="skipMessage" onclick="skip()" style="bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
+<a id="skipMessage" style="bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
 
 <div id="choiceA" class="container" style="display: none;">
 	
