--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 </div>
 
-<div id="choiceA1_1" class="container" style="display: none;">
+<div id="choiceA1_1_4_" class="container" style="display: none;">
 
-	<a id="A1_2_1" style="left: 30%; style="bottom: 2%;"><span><strong>GET FRONT DOOR KEY ON LEFT</strong></span></a>
-	<a id="A1_2_2" style="bottom: 2%;"><span><strong>RUN FAST TO RIGHT</strong></span></a>
+	<a id="A1_1_4_1" style="left: 30%; style="bottom: 2%;"><span><strong>GET FRONT DOOR KEY ON LEFT</strong></span></a>
+	<a id="A1_1_4_2" style="bottom: 2%;"><span><strong>RUN FAST TO RIGHT</strong></span></a>
 
 </div>
 	
