--- a/index.html
+++ b/index.html
@@ -53,9 +53,23 @@
 
 <div id="choiceA1_1_4" class="container" style="display: none;">
 
-	<a id="A1_1_4_1" style="left: 30%; style="bottom: 2%;"><span><strong>GET FRONT DOOR KEY ON LEFT</strong></span></a>
+	<a id="A1_1_4_1" style="left: 30%; style="bottom: 2%;"><span><strong>GET OFFICE KEY ON LEFT</strong></span></a>
 	<a id="A1_1_4_2" style="bottom: 2%;"><span><strong>RUN FAST TO RIGHT</strong></span></a>
 
+</div>
+					    
+<div id="choiceA1_1_4_1" class="container" style="display: none;">
+
+	<a id="A1_1_4_1_1" style="left: 30%; style="bottom: 2%;"><span><strong>OPEN THE WINDOW AND RUN</strong></span></a>
+	<a id="A1_1_4_1_2" style="bottom: 2%;"><span><strong>HIDE INSIDE THE OFFICE</strong></span></a>
+	
+</div>
+
+<div id="choiceA1_1_4_2" class="container" style="display: none;">
+
+	<a id="A1_1_4_2_1" style="left: 30%; style="bottom: 2%;"><span><strong>OPEN THE WINDOW AND RUN</strong></span></a>
+	<a id="A1_1_4_2_2" style="bottom: 2%; color: darkred"><span><strong>HIDE INSIDE THE OFFICE</strong></span></a>
+	
 </div>
 	
 			  
