--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 					    
 <div id="choiceA1_1_4_1" class="container" style="display: none;">
 
-	<a id="A1_1_4_1_1" style="left: 30%; style="bottom: 2%;"><span><strong>OPEN THE WINDOW AND RUN</strong></span></a>
+	<a id="A1_1_4_1_1" style="left: 30%; bottom: 2%;"><span><strong>OPEN THE WINDOW AND RUN</strong></span></a>
 	<a id="A1_1_4_1_2" style="bottom: 2%;"><span><strong>HIDE INSIDE THE OFFICE</strong></span></a>
 	
 </div>
 
 <div id="choiceA1_1_4_2" class="container" style="display: none;">
 
-	<a id="A1_1_4_2_1" style="left: 30%; style="bottom: 2%;"><span><strong>OPEN THE WINDOW AND RUN</strong></span></a>
+	<a id="A1_1_4_2_1" style="left: 30%; bottom: 2%;"><span><strong>OPEN THE WINDOW AND RUN</strong></span></a>
 	<a id="A1_1_4_2_2" style="bottom: 2%; color: darkred"><span><strong>HIDE INSIDE THE OFFICE</strong></span></a>
 	
 </div>
