--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div id="choiceA1_1_4" class="container" style="display: none;">
 
-	<a id="A1_1_4_1" style="left: 30%; bottom: 2%;"><span><strong>GET OFFICE KEY ON LEFT</strong></span></a>
+	<a id="A1_1_4_1" style="left: 30%; bottom: 2%;"><span><strong>CHECK TO THE LEFT</strong></span></a>
 	<a id="A1_1_4_2" style="bottom: 2%;"><span><strong>RUN FAST TO RIGHT</strong></span></a>
 
 </div>
