--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
 <div id="choiceA1_1" class="container" style="display: none;">
 
-	<a id="A1_1_1" style="left: 30%; bottom: 9%;"><span><strong>I HAVE TO STAY HERE!</strong></span></a>
-	<a id="A1_1_2" style="left: 30%; bottom: 2%;"><span><strong>I HAVE TO STAY HERE!</strong></span></a>
-	<a id="A1_1_3" style="bottom: 9%;"><span><strong>I HAVE TO STAY HERE!</strong></span></a>
-	<a id="A1_1_4" style="bottom: 2%;"><span><strong>RUN TO THE DOOR BEHIND ME</strong></span></a>
+	<a id="A1_1_1" style="left: 20%; bottom: 9%;"><span><strong>STAY HERE!</strong></span></a>
+	<a id="A1_1_2" style="left: 20%; bottom: 2%;"><span><strong>STAY HERE!</strong></span></a>
+	<a id="A1_1_3" style="bottom: 9%;"><span><strong>STAY HERE!</strong></span></a>
+	<a id="A1_1_4" style="bottom: 2%;"><span><strong>RUN TO THE DOOR!</strong></span></a>
 
 </div>
 
