--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
 	<a id="A1_1_4_2_2" style="bottom: 2%; color: darkred"><span><strong>HIDE INSIDE THE OFFICE</strong></span></a>
 	
 </div>
+
+<div id="FINAL" class="container" style="display: none;">
+
+	<a id="FINAL1" style="left: 30%; bottom: 2%;"><span><strong>GRAB PHONE</strong></span></a>
+	<a id="FINAL2" style="left: 15%; bottom: 2%;"><span><strong>GRAB CAR KEY</strong></span></a>
+	<a id="FINAL3" style="bottom: 2%; color: darkred"><span><strong>USE COMPUTER</strong></span></a>
+	
+</div>
 	
 			  
 		
