--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 	<label id="layer4" style="display:none;"></label>
 	<label id="layer5" style="display:none;"></label>
 	<label id="layer6" style="display:none;"></label>
+	<label id="layer7" style="display:none;"></label>
 					  
 </div>
 
