--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 	<a id="FINAL1" style="left: 30%; bottom: 2%;"><span><strong>GRAB PHONE</strong></span></a>
 	<a id="FINAL2" style="left: 15%; bottom: 2%;"><span><strong>GRAB CAR KEY</strong></span></a>
-	<a id="FINAL3" style="bottom: 2%; color: darkred"><span><strong>USE COMPUTER</strong></span></a>
+	<a id="FINAL3" style="left: 15%; bottom: 2%; color: darkred"><span><strong>USE COMPUTER</strong></span></a>
 	
 </div>
 	
