--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <a id="skipMessage" style="bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
 
+<a id="skipStory" style="left: 50%; bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
+
 <div id="choiceA" class="container" style="display: none;">
 	
 	<a id="A1" style=" right: 30%;bottom: 5%;"><span><strong>I'm gonna watch a movie...</strong></span></a>
