--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <a id="skipMessage" style="bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
 
-<a id="skipStory" style="left: 50%; bottom: 5%; display: none;"><span><strong>Continue</strong></span></a>
+<a id="skipStory" style="left: 50%; bottom: 5%; display: none;"><span><strong>Skip Story</strong></span></a>
 
 <div id="choiceA" class="container" style="display: none;">
 	
