--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" type="text/css" href="css/MENUCSS.css">
 	
 </head>
-<body style = "scroll: no; background-color:  black; margin: 0; overflow-x: hidden; overflow-y:hidden; height:92%; width:auto; -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
+<body style = "background-color:  black; margin: 0; overflow-x: hidden; overflow-y:hidden; height:92%; width:auto; -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
  unselectable="on"
  onselectstart="return false" 
- onmousedown="return false">
+ onmousedown="return false" scroll="no">
 
 <video height="95%" width="100%" poster="mainmenupage.png" id="vid" style="controls: none">
          <source id="mp4video" type="video/mp4" src="videos/intro.mp4"></source>
